--- a/firmware/main/CMakeLists.txt
+++ b/firmware/main/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS
-                            "mesh_main.c"
+                            "mesh_main.c"  "crypto.c" "network.c"
                     INCLUDE_DIRS "." "include")
